# Canadian-Experience-Project

./: Movie.anim  README.md
CanadianExperienceLib/: Adapter.cpp  Adapter.h  CMakeLists.txt  PictureFactory.cpp  PropFactory.cpp  PropFactory.h  Timeline.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  Machine.cpp  Machine.h  Machine2Factory.cpp  Machine2Factory.h  MachineCFactory.cpp  MachineCFactory.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MotionSink.cpp  MotionSink.h  MotionSource.cpp  MotionSource.h  Motor.cpp  Motor.h  Polygon.h  Pulley.cpp  Pulley.h  Shape.cpp  Shape.h  SnowBlower.cpp  SnowBlower.h  SnowFlakes.cpp  SnowFlakes.h
resources/xrc/: main.fbp  main.xrc
